# warleon-RayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  glad.c
shaders/: 3d-normals.frag  3d-normals.geom  3d-normals.vert  sprite.frag  sprite.vert
src/: AABB.cpp  Camera.cpp  Canvas.cpp  Grid.cpp  Mesh.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Triangle.cpp  common.cpp  main.cpp
src/include/: AABB.hpp  Camera.hpp  Canvas.hpp  Color.hpp  GJK.hpp  GJK.ipp  Grid.hpp  Grid.ipp  Mesh.hpp  Ray.hpp  Reference.h  Renderer.hpp  Scene.hpp  Triangle.hpp  common.hpp  id.hpp  types.hpp
src/include/glad/: glad.h
tests/: camera.cpp  canvas.cpp  grid.cpp  mesh.cpp  ray.cpp  triangle.cpp
